# scheduler-jupyter-extension

./: .copier-answers.yml  .gitignore  .prettierignore  Dockerfile  LICENSE  README.md  RELEASE.md  build.sh  install.json  nginx.conf  nginx.sh  package-lock.json  package.json  pyproject.toml  save_extension.sh  setup.py
.github/workflows/: build.yml  check-release.yml  docker-build.  docker-build.yml
jupyter_docker_file/: common.mk
jupyter_docker_file/base/: Dockerfile  Makefile
jupyter_docker_file/jupyter-base/: Dockerfile  Makefile  pip.conf  requirements.txt  sources.list
jupyter_docker_file/jupyter-base/s6/cont-init.d/: 01-jupyterlab-config  02-gitconfig  04-conda-init
scheduler_jupyter_extension/: __init__.py
src/: index.js  index.ts  mockData.js
src/templates/: scheduler-create.js  scheduler-create.ts  scheduler-status.js
style/: index.css  scheduler-create.css
